# freenect2-rs

./: Cargo.toml  LICENSE  README.md  build.rs
csrc/: freenect2_shim.cpp  freenect2_shim.h
src/: kinect.rs  lib.rs  raw.rs
