[package]
name = "freenect2-rs"
description = "Safe Rust bindings for libfreenect2 (Kinect v2)"
license = "Apache-2.0"
repository = "https://github.com/minimalism/freenect2-rs"
keywords = ["kinect", "freenect2", "depth", "rgb", "usb"]
categories = ["hardware-support", "external-ffi-bindings"]
version = "0.1.0"
edition = "2024"

[dependencies]

[build-dependencies]
cc = "1.2"
bindgen = "0.71"
pkg-config = "0.3"
